--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 table-responsive">
+                <div class="col-lg-12 table-responsive">
                     <p class="heading mb-2 text-lg">Disbursements</p>
                     <table class="table table-striped">
 
@@ -162,7 +162,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-lg-6 table-responsive">
+                <div class="col-lg-12 table-responsive">
                     <p class="heading mb-2 text-lg">Recovery</p>
                     <table class="table table-striped">
                         <!-- <thead>
@@ -210,12 +210,12 @@
                 </div>
             </div>
 
-            <!-- <div class="row">
-                <div class="col-lg-12 table-responsive">
+            <div class="row">
+                <div class="col-lg-6 table-responsive">
                     <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table table-striped">
 
-                        <thead>
+                        <!-- <thead>
                         <tr class="table-header-background">
                             <th scope="col">Branch</th>
                             <th scope="col">Disbursement</th>
@@ -227,24 +227,16 @@
                             <th scope="col">Utilization</th>
                             <th scope="col">Mutations</th>
                         </tr>
-                        </thead>
+                        </thead> -->
                         <tbody>
                         <tr *ngFor="let item of CountryTop5">
-
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td> {{item.Name}}</td>
+                            <td> {{item.Amount}}</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
