--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -196,6 +196,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 table-responsive">
+                    <p class="heading mb-2 text-lg">Branch Position</p>
                     <table class="table table-striped">
                         <thead>
                         <tr class="table-header-background">
