--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -66,7 +66,7 @@
     </div>
     <div>
     </div>
-    <div class="col-lg-12 mt-2">
+    <div class="col-lg-12 mt-2 mb-2">
         <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" >
             <table class="table accordion table-striped">
                 <thead>
