--- a/src/app/modules/dashboard/pyramid-chart/pyramid-chart.component.html
+++ b/src/app/modules/dashboard/pyramid-chart/pyramid-chart.component.html
@@ -1,5 +1,4 @@
-<div class="pyramid-container " style="min-height: 310px;">
-
+<div *ngIf="isData" class="pyramid-container " style="min-height: 310px;">
     <div id="pyramid-level-2" class="position-relative">
         <div class="position-absolute text" style="top: 88px; font-size: 12px;">Recovery : {{item?.Recovery}}</div>
     </div>
@@ -9,4 +8,7 @@
     <div id="pyramid-level-11" style="margin-top: 3px;" class="position-relative">
         <div class="position-absolute top-5 text" style=" font-size: 12px;">Margin :{{item?.Margin}}</div>
     </div>
+</div>
+<div *ngIf="!isData"  style="margin-top: 25%; color: #01671B; font-size: 18px; margin-left: 35%;">
+    <p>No Data  Available </p>
 </div>
