--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions1" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions1.series"
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions2" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions2.series"
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions3" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions3.series"
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box">
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartOptions4" class=" m-0 pt-2">
                             <apx-chart
                                 [series]="chartOptions4.series"
@@ -113,13 +113,13 @@
                     <p class="heading mb-2 text-lg">Recovery</p>
                     <table class="table  table-striped">
 
-                        <thead>
+                        <!-- <thead>
                         <tr class="table-header-background">
                             <th scope="col">Calendar Year Target</th>
                             <th scope="col">Achievement</th>
                             <th scope="col">%age</th>
                         </tr>
-                        </thead>
+                        </thead> -->
                         <tbody>
                         <tr *ngFor="let item of ResourcesCount">
                             <td>{{dashboardService.getCamelCaseString(item[0])}}</td>
@@ -166,7 +166,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+
+                
 
         </div>
 
