--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -117,7 +117,7 @@
 
 
                 <div class="col-lg-12 table-responsive">
-                    <p class="heading mb-2 text-lg">Zone Wise WithIn Province</p>
+                    <p class="heading mb-2 text-lg">Zone Wise Within Province</p>
                     <table class="table  table-striped">
 
                         <thead>
