--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -65,9 +65,8 @@
         <div class="row">
             <div class="col-lg-6 py-3">
                 <div class="shadow-sm border pt-2" *ngIf="CreditCeiling"  style="height: 365px;" >
-                    <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                    <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Purpose wise Default (Over Dues + NPLs)</p>
                     <app-pyramid-chart [item]="CreditCeiling">
-
                     </app-pyramid-chart>
 
                 </div>
@@ -75,45 +74,85 @@
         </div>
         <div class="row">
             <div class="col-lg-6 table-responsive">
+                <p class="heading mb-2 text-lg">Recovery</p>
                 <table class="table table-striped">
-                    <tbody>
-                    <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
-                        <td>
-                            <div class="d-grid">
-                                <div>
-                                   {{dashboardService.getCamelCaseString(items[0],0)}}
+                    <tbody *ngIf="DisbursmentAchievement">
+                        <tr class="text-center">
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCase("CalenderYear")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["CalenderYearAchievement"]}}
+                                    </div>
                                 </div>
-                                <div class="fw-bold">
-                                    {{dashboardService.getCamelCaseString(items[0],1)}}
+                            </td>
+
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCase("CorrespondingCalenderYear")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["CorrespondingCalenderYearAchievement"]}}
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-grid">
-                                <div>
-                                    {{dashboardService.getCamelCaseString(items[1],0)}}
-                                 </div>
-                                 <div class="fw-bold">
-                                     {{dashboardService.getCamelCaseString(items[1],1)}}
-                                 </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-grid">
-                                <div>
-                                    {{dashboardService.getCamelCaseString(items[2],0)}}
-                                 </div>
-                                 <div class="fw-bold">
-                                     {{dashboardService.getCamelCaseString(items[2],1)}}
-                                 </div>
-                            </div>
-                        </td>
-                    </tr>
+                            </td>
+
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{getFormatString("Increase_Decrease_Calendar")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["Increase_Decrease_Calendar"]}}
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <tr class="text-center">
+                        
+
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCase("FiscalYear")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["FiscalYearAchievement"]}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{dashboardService.getCamelCase("CorrespondingFiscalYear")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["CorrespondingFiscalYearAchievement"]}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-grid">
+                                    <div>
+                                        {{getFormatString("Increase_Decrease_Fiscal")}}
+                                    </div>
+                                    <div class="fw-bold">
+                                        {{DisbursmentAchievement["Increase_Decrease_Fiscal"]}}
+                                    </div>
+                                </div>
+                            </td>
+
+                        </tr>
                     </tbody>
 
                 </table>
             </div>
             <div class="col-lg-6 table-responsive">
+                <p class="heading mb-2 text-lg">Recovery</p>
                 <table class="table table-striped">
                     <tbody>
                     <tr *ngFor="let items of RecoveryAchievement" class="text-center">
@@ -155,6 +194,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-lg-16 table-responsive">
+                <p class="heading mb-2 text-lg">Top 10 NPLs Concentration Zones</p>
                 <table class="table table-striped">
                     <thead>
                     <tr class="table-header-background">
@@ -174,6 +214,7 @@
                 </table>
             </div>
             <div class="col-lg-16 table-responsive">
+                <p class="heading mb-2 text-lg">Top 10 SAM Concentration Zones</p>
                 <table class="table table-striped">
                     <thead>
                     <tr class="table-header-background">
