create tourplan arpproval / sign out /

--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -119,8 +119,7 @@
                                             matSuffix
 
                                             (click)="openFromIcon(timepickerDeparture)"
-                                        >schedule</mat-icon
-                                        >
+                                        >schedule</mat-icon>
 
 <!--                                        <mat-icon-->
 <!--                                            matPrefix-->
