--- a/src/app/modules/auth/sign-out/sign-out.component.html
+++ b/src/app/modules/auth/sign-out/sign-out.component.html
@@ -24,9 +24,9 @@
             <!-- Form footer -->
             <div class="mt-8 text-md font-medium text-secondary text-center">
                 <span>Go to</span>
-                <a
+                <a (click)="logout()"
                     class="ml-1 text-primary-500 hover:underline"
-                    [routerLink]="['/auth/sign-in']">sign in
+                >sign in
                 </a>
             </div>
         </div>
