--- a/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
+++ b/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
@@ -114,10 +114,10 @@
                     </div>
 
                     <div class="mr-5">
-                        <button mat-icon-button id="{{'arrow_down_'+i}}" >
+                        <button mat-icon-button id="{{'arrow_down_'+i}}"  style="display: block;">
                             <mat-icon>expand_more</mat-icon>
                         </button>
-                        <button mat-icon-button id="{{'arrow_up_'+i}}" >
+                        <button mat-icon-button id="{{'arrow_up_'+i}}" style="display: none;">
                             <mat-icon>expand_less</mat-icon>
                         </button>
                     </div>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div class="custom-accordion-body" id="{{'table_date_'+i}}"
-                             style="display: none;width:99%;float: right;">
+                             style="display: none;">
                             <table class="table table-responsive" style="display: inline-table !important;">
                                 <thead class="thead-light">
                                 <tr class="table-header-background">
