--- a/src/app/layout/common/change-password/change-password.component.html
+++ b/src/app/layout/common/change-password/change-password.component.html
@@ -15,17 +15,59 @@
     <span class="text-md font-bold text-green-500" id="success_to_display"></span>
 
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-        <input matInput type="password" placeholder="Old Password" formControlName="old_password"
+        <input matInput type="password" placeholder="Old Password" formControlName="old_password" #passwordField
         />
+        <button
+            mat-icon-button
+            type="button"
+            (click)="passwordField.type === 'password' ? passwordField.type = 'text' : passwordField.type = 'password'"
+            matSuffix>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="passwordField.type === 'password'"
+                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="passwordField.type === 'text'"
+                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+        </button>
     </mat-form-field>
 
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-        <input matInput type="password" placeholder="New Password" formControlName="new_password"
+        <input matInput type="password" placeholder="New Password" formControlName="new_password" #newpasswordField
         />
+        <button
+            mat-icon-button
+            type="button"
+            (click)="newpasswordField.type === 'password' ? newpasswordField.type = 'text' : newpasswordField.type = 'password'"
+            matSuffix>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="newpasswordField.type === 'password'"
+                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="newpasswordField.type === 'text'"
+                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+        </button>
     </mat-form-field>
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-        <input class="w-full" matInput type="password" placeholder="Change Password" formControlName="confirm_password"
+        <input class="w-full" matInput type="password" placeholder="Change Password" formControlName="confirm_password" #confirmpasswordField
         />
+        <button
+            mat-icon-button
+            type="button"
+            (click)="confirmpasswordField.type === 'password' ? confirmpasswordField.type = 'text' : confirmpasswordField.type = 'password'"
+            matSuffix>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="confirmpasswordField.type === 'password'"
+                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+            <mat-icon
+                class="icon-size-5"
+                *ngIf="confirmpasswordField.type === 'text'"
+                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+        </button>
     </mat-form-field>
 
     <div class="row border-t ">
