--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -45,7 +45,7 @@
                                        [theme]="chartOptions?.theme"
                                        [responsive]="chartOptions?.responsive"
                                        [noData]="chartOptions.noData"
-
+                                       [colors]="chartOptions?.colors"
                             ></apx-chart>
                         </div>
                     </div>
